force-app/main/default/objects/Invoice_Line_Item1__c/Invoice_Line_Item1__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item1</label>
    <nameField>
        <displayFormat>LN-{0000}</displayFormat>
        <label>Invoice Line Item1 No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>