force-app/main/default/objects/Invoice_Line_Item1__c/fields/InvoiceNo1__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo1__c</fullName>
    <label>Invoice1</label>
    <referenceTo>Invoice1__c</referenceTo>
    <relationshipLabel>Invoice Line Items1</relationshipLabel>
    <relationshipName>Invoice_Line_Items1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>