force-app/main/default/objects/Invoice_Line_Item1__c/fields/Merchandise1__c.field-meta.xml
<CustomField>
    <fullName>Merchandise1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchandise1</label>
    <referenceTo>Merchandise1__c</referenceTo>
    <relationshipLabel>Invoice Line Items1</relationshipLabel>
    <relationshipName>Invoice_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>