force-app/main/default/objects/Invoice_Line_Item1__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>